--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,11 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginTop="20dp"
         android:id="@+id/idRVNotes"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/note_rv_item"/>
+        android:layout_marginTop="20dp"
+        tools:listitem="@layout/note_rv_item" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/idFABAddNote"
@@ -20,13 +20,35 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         android:backgroundTint="@color/orange"
         android:src="@drawable/ic_edit_note"
+        app:maxImageSize="40dp"
         app:tint="@color/white"
         tools:ignore="SpeakableTextPresentCheck" />
+
+    <ImageView
+        android:id="@+id/idIVNote"
+        android:visibility="invisible"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:src="@drawable/notes" />
+
+    <TextView
+        android:id="@+id/idTVNoteMessage"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/idIVNote"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:layout_centerHorizontal="true"
+        android:text="Oops! You don't have any task."
+        android:textSize="22sp"/>
 
 </RelativeLayout>
