--- a/app/src/main/res/layout/activity_add_edit_note_acitivity.xml
+++ b/app/src/main/res/layout/activity_add_edit_note_acitivity.xml
@@ -7,7 +7,7 @@
     tools:context=".AddEditNoteActivity">
 
     <EditText
-        android:id="@+id/ETTilte"
+        android:id="@+id/ETTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="56dp"
