--- a/app/src/main/res/layout/note_rv_item.xml
+++ b/app/src/main/res/layout/note_rv_item.xml
@@ -60,7 +60,7 @@
 
         <TextView
             android:id="@+id/idTVNoteTime"
-            android:layout_width="50dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginLeft="15dp"
