--- a/app/src/main/res/drawable/more_dialog_bg.xml
+++ b/app/src/main/res/drawable/more_dialog_bg.xml
@@ -12,4 +12,9 @@
         android:left="10dp"
         android:right="10dp"
         android:top="10dp" />
+
+    <gradient android:startColor="@color/yellow"
+        android:centerColor="@android:color/holo_blue_light"
+        android:endColor="@color/green"/>
+
 </shape>
