--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="red">#e84e40</color>
     <color name="green">#4CAF50</color>
     <color name="orange">#ff7058</color>
+    <color name="yellow">#ffee58</color>
 
     <array name="random_color">
         <item name="red_400" type="color">#e84e40</item>
